devops-starter/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-starter-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-starter-svc
                port:
                  number: 80
